AC_INIT([Makefile.in], 0.1)

SVN_RELEASE=`svn info . | grep "^Revision"|cut -d " " -f 2`
MACHINE=`uname -m`
SYSTEM=`uname -s`

if test $MACHINE = "x86_64"; then
   EXTN="amd64"
else
   EXTN="i386"
fi

DATE=`date +"%Y-%m-%d"`


dnl> http://luajit.org/install.html
if test $SYSTEM = "Darwin"; then
   if test $MACHINE = "x86_64"; then 
      LINK_OPTS="-pagezero_size 10000 -image_base 100000000"
   fi
fi

AC_MSG_CHECKING(for gnutls)
AC_CHECK_LIB([gnutls], [gnutls_priority_set], gnutls=true)
AM_CONDITIONAL(HAVE_GNUTLS, test x$gnutls = xtrue)
AC_DEFINE_UNQUOTED([HAVE_GNUTLS], $gnutls, [We have gnutls])
if test x$gnutls = xtrue
 then
  LIBGNUTLS="-lgnutls"

  AC_MSG_CHECKING(for gcrypt)
  AC_CHECK_LIB([gcrypt], [gcry_check_version], gcrypt=true)
  if test x$gcrypt = xtrue
  then
    LIBGNUTLS="${LIBGNUTLS} -lgcrypt"
  fi
fi

echo "Checking RRD prerequisites..."
AC_CHECK_LIB([xml2], [xmlParseFile], xml2=true)
if test x$xml2 = x
then
echo "Please install libxml2 (RRD prerequisite)"
exit
fi


GMAKE=`which gmake`
if test x$GMAKE = x
then
	GMAKE="make"
fi

umask 002

AC_DEFINE_UNQUOTED(PACKAGE_RELEASE, "r$SVN_RELEASE", [SVN release of this package])
AC_DEFINE_UNQUOTED(PACKAGE_MACHINE, "$MACHINE", [Architecture of this host])
AC_SUBST(MACHINE)
AC_SUBST(SYSTEM)
AC_SUBST(EXTN)
AC_SUBST(DATE)
AC_SUBST(KERNEL)
AC_SUBST(SVN_RELEASE)
AC_SUBST(LINK_OPTS)
AC_SUBST(LIBGNUTLS)
AC_SUBST(GMAKE)

AC_CONFIG_HEADERS(config.h)
AC_CONFIG_FILES(Makefile)

AC_OUTPUT

echo "You are now reaady to compile typing $GMAKE"